tests/parser/break-statement-outside-loop.stderr
error: 'break' outside loop
 --> $DIR/break-statement-outside-loop.lox:1:15
  |
1 | while true {} break;
  |               ^^^^^
